// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SettingsSection SettingsSection.FieldWrapper renders correctly with label 1`] = `
<label
  className="nxrm-settings-section-field-wrapper"
>
  <label
    className="nxrm-settings-section-field-wrapper-label"
  >
    test label
  </label>
  <input
    type="text"
  />
</label>
`;

exports[`SettingsSection SettingsSection.FieldWrapper renders correctly without label 1`] = `
<div
  className="nxrm-settings-section-field-wrapper"
>
  <input
    type="text"
  />
</div>
`;

exports[`SettingsSection SettingsSection.Footer renders correctly 1`] = `
<div
  className="nxrm-settings-section-footer"
>
  <button>
    test
  </button>
</div>
`;

exports[`SettingsSection renders correctly 1`] = `
<Fragment>
  <div
    className="nxrm-settings-section"
  >
    <span>
      test
    </span>
  </div>
</Fragment>
`;

exports[`SettingsSection renders correctly while isLoading 1`] = `
<Fragment>
  <span
    className="nxrm-settings-section-loading-mask"
    style={
      Object {
        "height": 0,
        "width": 0,
      }
    }
  >
    Loading...
  </span>
  <div
    className="nxrm-settings-section"
  >
    <span>
      test
    </span>
  </div>
</Fragment>
`;
